keycloak/networking/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: nginx
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: cert-manager
