keycloak/networking/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: keycloak
  annotations:
    kubernetes.io/ingress.class: "nginx"
    certmanager.k8s.io/cluster-issuer: letsencrypt
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  rules:
  - host: keycloak.subdomain.example.com
    http:
      paths:
      - backend:
          serviceName: keycloak
          servicePort: 80
  tls:
  - hosts:
    - keycloak.subdomain.example.com
    secretName: cert-keycloak.subdomain.example.com
